--- a/application/static/main.css
+++ b/application/static/main.css
@@ -1,4 +1,4 @@
-#currently-playing {
+#nothing-playing {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -33,7 +33,7 @@
 }
 
 .track {
-  padding: 15px;
+  padding: 30px;
   display: flex;
   border-radius: 30px;
   /* box-shadow: 0 0 5px black; */
@@ -43,7 +43,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-left: 15px;
+  margin-left: 40px;
   color: black;
 }
 
@@ -75,4 +75,57 @@
   box-shadow: 0 0 10px black;
   transform: scale(1.05);
   transition: 500ms;
+}
+
+.track__spotify_link:hover .track__spotify_notification {
+  display: inline;
+  height:
+}
+
+.currently-playing {
+  background: gray;
+}
+
+.currently-playing__header {
+  font-size: 3rem;
+  font-weight: bolder;
+}
+
+.currently-playing__title {
+  font-size: 2rem;
+}
+
+.currently-playing__artist {
+  font-size: 1.8rem;
+}
+
+.currently-playing__album {
+  font-size: 1.6rem;
+}
+
+#currently-playing {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0px 150px;
+  padding: 50px;
+  /* background: gray; */
+}
+
+.currently-playing__spotify_link_wrapper {
+  padding: 20px;
+  background-color: #1ed760;
+  border-radius: 20px;
+}
+
+.currently-playing__spotify_link_wrapper:hover {
+  cursor: pointer;
+  background-color:#15a247;
+}
+
+.currently-playing__spotify_link {
+  text-decoration: none;
+  color: white;
+  font-size: 1.5rem;
 }
